Add ability to search for the users

--- a/views/createUser.ejs
+++ b/views/createUser.ejs
@@ -1,19 +1,37 @@
 <!-- views/createUser.ejs -->
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-  </head>
+
+<head>
+  <title>
+    <%= title %>
+  </title>
+</head>
+
 <body>
-  <h1><%= title %></h1>
+  <h1>
+    <%= title %>
+  </h1>
   <%- include("partials/errors.ejs") %>
-  <form action="/create" method="POST">
-    <label for="firstName">First Name: </label>
-    <input type="text" name="firstName" id="firstName" required>
-    <label for="lastName">Last Name: </label>
-    <input type="text" name="lastName" id="lastName" required>
-    <button type="submit">Submit</button>
-  </form>
-  <a href="/">Back to home</a>
+    <form action="/create" method="POST">
+      <label for="firstName">First Name: </label>
+      <input type="text" name="firstName" id="firstName" required>
+      
+      <label for="lastName">Last Name: </label>
+      <input type="text" name="lastName" id="lastName" required>
+      
+      <label for="email">Email: </label>
+      <input type="email" name="email" id="email" required>
+
+      <label for="age">Age: </label>
+      <input type="number" name="age" id="age" min="18" max="120">
+
+      <label for="bio">Bio: </label>
+      <textarea name="bio" id="bio" maxlength="120"></textarea>
+
+      <button type="submit">Submit</button>
+    </form>
+    <a href="/">Back to home</a>
 </body>
+
 </html>
