--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,28 +1,40 @@
 <!-- views/index.ejs -->
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title><%= title %></title>
+  <title>
+    <%= title %>
+  </title>
 </head>
+
 <body>
-  <h1><%= title %></h1>
+  <h1>
+    <%= title %>
+  </h1>
   <ul>
     <% if (locals.users) {%>
-      <% users.forEach(user => { %>
+      <% users.forEach(user=> { %>
         <li>
-            ID: <%= user.id %>, Name: <%= user.firstName %> <%= user.lastName %>
-            <a href="/<%= user.id %>/update">Update</a>
-            <form action="/<%= user.id %>/delete" method="POST" style="display:inline;">
-                <button type="submit" onclick="return confirm('Are you sure you want to delete this user?');">Delete</button>
-              </form>
-        
+          ID: <%= user.id %>, Name: <%= user.firstName %>,
+              Last name: <%= user.lastName %>,
+              Email: <%= user.email %>,
+              Age: <%= user.age %>,
+              Bio: <%= user.bio %>,
+      
+              <a href="/<%= user.id %>/update">Update</a>
+                <form action="/<%= user.id %>/delete" method="POST" style="display:inline;">
+                  <button type="submit"
+                    onclick="return confirm('Are you sure you want to delete this user?');">Delete</button>
+                </form>
         </li>
-      <% }); %>
-    <% } %>
+        <% }); %>
+          <% } %>
   </ul>
   <!-- In views/index.ejs -->
 
-  
   <a href="/create">Create a user</a>
+  <a href="/search">Search for a user</a>
 </body>
+
 </html>
